# ImageLab

./: .gitignore  build-qt6.11-minimal.bat  qt-build.bat  qt5-build.bat  qt6-build.bat  readme  viewData.m
AFTEREFFECT_PLUGIN.DEV/: ADOBE_AE.rar  ImageLabAE.sln
AFTEREFFECT_PLUGIN.DEV/AEUtils/: AEUtils.vcxproj  AEUtils.vcxproj.filters
AFTEREFFECT_PLUGIN.DEV/AFMedianFilter/: AFMedianFilter.r  AFMedianFilter.rc  AFMedianFilter.vcxproj  AFMedianFilter.vcxproj.filters
AFTEREFFECT_PLUGIN.DEV/AI_EngineBuilder/: AI_EngineBuilder.vcxproj  AI_EngineBuilder.vcxproj.filters
AFTEREFFECT_PLUGIN.DEV/AI_ImageLabDenoise/: AI_ImageLabDenoise.r  AI_ImageLabDenoise.rc  AI_ImageLabDenoise.vcxproj  AI_ImageLabDenoise.vcxproj.filters
AFTEREFFECT_PLUGIN.DEV/ArtMosaic/: ArtMosaic.r  ArtMosaic.rc  ArtMosaic.vcxproj  ArtMosaic.vcxproj.filters
AFTEREFFECT_PLUGIN.DEV/ArtPaint/: ArtPaint.r  ArtPaint.rc  ArtPaint.vcxproj  ArtPaint.vcxproj.filters
AFTEREFFECT_PLUGIN.DEV/ArtPointilism/: ArtPointilism.r  ArtPointilism.vcxproj  ArtPointilism.vcxproj.filters
AFTEREFFECT_PLUGIN.DEV/ArtPointillism/: ArtPointillism.r  (+3 more)
PHOTOSHOP_PLUGIN.DEV/: ADOBE_PS.rar
PREMIER_PLUGIN.DEV/: ADOBE.rar  ImageLab.sln
PREMIER_PLUGIN.DEV/AsyncJob/: AsyncJob.sln  AsyncJob.vcxproj  AsyncJob.vcxproj.filters  CMakeLists.txt
PREMIER_PLUGIN.DEV/AsyncJob/include/: CAsyncJob.hpp  CAsyncJobQueue.hpp  CCommon.hpp  CThreadPool.hpp  CWorkerThread.hpp
PREMIER_PLUGIN.DEV/AsyncJob/src/: CAsyncJob.cpp  CAsyncJobQueue.cpp  CThreadPool.cpp  CWorkerThread.cpp  DllMain.cpp  main_tst.cpp
PerformanceTest/: PerformanceTest.sln
(+1389 files in other folders)
